...
        onStop={handleStop}
      />

      <View style={styles.results}>
        <TopTab.Navigator>
          <TopTab.Screen name="Pings">{() => <PingsTab results={results} />}</TopTab.Screen>
          <TopTab.Screen name="Histogram">{() => <HistogramTab results={results} />}</TopTab.Screen>
          <TopTab.Screen name="Details">{() => <DetailsTab results={results} protocol={protocol} />}</TopTab.Screen>
          <TopTab.Screen name="Graph">{() => <GraphTab results={results} />}</TopTab.Screen>
        </TopTab.Navigator>
      </View>
    </View>
  );
}

...
