appId: cl.felipebarriga.pingvista
---
- launchApp
- assertVisible: "Protocol"
- tapOn: "TCP"
- assertVisible: "Host"
- assertVisible: "Port"
